--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "seed": "node seeder.js",
+    "start": "nodemon index.js",
+    "seeder": "nodemon seeder.js",
     "dev": "node index.js"
   },
   "dependencies": {
     "express": "^4.17.2",
     "faker": "^5.5.3",
-    "mongoose": "^6.1.3"
+    "mongoose": "^6.1.3",
+    "nodemon": "^2.0.15"
   }
 }
